2009-11-06  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        https://bugs.webkit.org/show_bug.cgi?id=31197
        Implemented a timezone cache not based on Mac OS X's notify_check API.
        
        If the VM calculates the local timezone offset from UTC, it caches the
        result until the end of the current VM invocation. (We don't want to cache
        forever, because the user's timezone may change over time.)
        
        This removes notify_* overhead on Mac, and, more significantly, removes
        OS time and date call overhead on non-Mac platforms.

        ~8% speedup on Date microbenchmark on Mac. SunSpider reports maybe a tiny
        speedup on Mac. (Speedup on non-Mac platforms should be even more noticeable.)

        * JavaScriptCore.exp:

        * interpreter/CachedCall.h:
        (JSC::CachedCall::CachedCall):
        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::execute):
        * runtime/JSGlobalObject.h:
        (JSC::DynamicGlobalObjectScope::DynamicGlobalObjectScope): Made the 
        DynamicGlobalObjectScope constructor responsible for checking whether a
        dynamicGlobalObject has already been set. This eliminated some duplicate
        client code, and allowed me to avoid adding even more duplicate client
        code. Made DynamicGlobalObjectScope responsible for resetting the
        local timezone cache upon first entry to the VM.

        * runtime/DateConstructor.cpp:
        (JSC::constructDate):
        (JSC::callDate):
        (JSC::dateParse):
        (JSC::dateUTC):
        * runtime/DateConversion.cpp:
        (JSC::parseDate):
        * runtime/DateConversion.h:
        * runtime/DateInstance.cpp:
        (JSC::DateInstance::gregorianDateTime):
        * runtime/DateInstance.h:
        * runtime/DateInstanceCache.h:
        * runtime/DatePrototype.cpp:
        (JSC::setNewValueFromTimeArgs):
        (JSC::setNewValueFromDateArgs):