@@ -1,5 +1,12 @@
 2009-11-06  Geoffrey Garen  <ggaren@apple.com>
 
+        Build fix: added some #includes.
+
+        * wtf/CurrentTime.h:
+        * wtf/DateMath.h:
+
+2009-11-06  Geoffrey Garen  <ggaren@apple.com>
+
         Reviewed by Oliver Hunt.
         
         https://bugs.webkit.org/show_bug.cgi?id=31197
